feat: unify menu data, normalize names, improve print and header spacing

--- a/indexMenuPers.html
+++ b/indexMenuPers.html
@@ -6,7 +6,7 @@
     <title>Menú del día</title>
     <link rel="stylesheet" href="assets/css/indexMenuPers.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="icon" type="image/jpeg" href="assets/img/logoSuteba.jpg">
+    <link rel="icon" type="image/png" href="assets/img/logoSuteba39.png">
 </head>
 <body>
     <nav class="top-nav">
@@ -14,7 +14,7 @@
     </nav>
     <header>
         <div class="headImages">
-            <div class="rightIma"><img src="assets/img/logoSuteba.jpg" alt="Logo Suteba"></div>
+            <div class="rightIma"><img src="assets/img/logoSuteba39.png" alt="Logo Suteba"></div>
         </div>
         <h1>Menú del día</h1>
     </header>
