--- a/adminMenu.html
+++ b/adminMenu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrador de Menu</title>
     <link rel="stylesheet" href="assets/css/adminMenu.css">
-    <link rel="icon" type="image/jpeg" href="assets/img/logoSuteba.jpg">
+    <link rel="icon" type="image/png" href="assets/img/logoSuteba39.png">
 </head>
 <body>
     <nav class="top-nav">
@@ -13,7 +13,7 @@
     </nav>
     <header>
         <div class="headImages">
-            <div class="rightIma"><img src="assets/img/logoSuteba.jpg" alt="Logo Suteba"></div>
+            <div class="rightIma"><img src="assets/img/logoSuteba39.png" alt="Logo Suteba"></div>
         </div>
         <h1>Administrador de menu</h1>
         <p class="subtitle">Editar y guardar el JSON del menu.</p>
